# copy-that

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_CONSOLIDATION.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_QUALITY_ASSESSMENT.md  ARCHITECTURE_QUICK_REFERENCE.md  ARCHIVE_ROADMAP.md  BRANCH_CLEANUP_GUIDE.md  BRANCH_CLEANUP_SESSION_2025_12_08.md  BRANCH_MERGE_SESSION_SUMMARY_2025_12_07.md  CHANGELOG.md  CLAUDE.md  COLOR_FEATURE_COMPLETE_SUMMARY.md  COLOR_PIPELINE_ANALYSIS.md  COLOR_PIPELINE_END_TO_END.md  COLOR_PIPELINE_UNIFIED_ARCHITECTURE.md  COLOR_PIPELINE_VISUALIZATION_HANDOFF.md  COMPLETION_STATUS_DETAILED.md  COMPREHENSIVE_SYSTEM_ARCHITECTURE.md  DEPLOYMENT_GUIDE_GCP_CLOUDRUN.md  DEPLOYMENT_HANDOFF_2025_12_03.md  DEPLOYMENT_READINESS_SUMMARY_2025_12_08.md  DEVELOPMENT.md  DEVELOPMENT_STATUS_2025_12_10.md  DOCS_COMPREHENSIVE_CLEANUP_PLAN.md  DOCUMENTATION_CONSOLIDATION_PLAN.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_LEGACY_AUDIT_2025_12_12.md  Dockerfile  Dockerfile.cloudrun  Dockerfile.debug  Dockerfile.frontend  EXTRACTION_IMPROVEMENTS.md  FAST_DEVELOPMENT_WORKFLOW.md  FRONTEND_REVIEW_COMPLETE.md  GENERATIVE_UI_ARCHITECTURE.md  HANDOFF_2025_12_03_FIXES.md  HANDOFF_2025_12_03_UI_IMPROVEMENTS.md  (+88 more)
.claude/: CLAUDE.md  claude.json
.claude/commands/: setup.md
.github/: dependabot.yml
.github/workflows/: build.yml  ci-tiered.yml  ci.yml  deploy.yml  neon_workflow.yml
alembic/: README.md  env.py
alembic/versions/: 2025_11_19_222141_expand_color_tokens_properties.py  2025_11_19_add_color_tokens.py  2025_11_20_003_add_semantic_names.py  2025_11_20_004_rename_semantic_name_to_design_intent.py  2025_11_20_005_add_extraction_metadata.py  2025_11_20_006_add_session_and_library_models.py  2025_11_22_001_add_performance_indexes.py  2025_11_22_002_add_user_authentication.py  2025_11_24_add_project_snapshots.py  2025_11_24_add_spacing_tokens.py  2025_12_01_add_additional_fk_indexes.py  2025_12_02_add_shadow_tokens.py  2025_12_03_add_typography_and_font_tokens.py  2025_12_08_add_cost_tracking.py  2025_12_09_add_color_token_fields.py  c1a36d61036a_initial_schema_projects_and_extraction_.py
backend/models/: cost_tracking.py
backend/routers/: cost_tracker.py
backend/services/: cost_aggregator.py
deploy/: deploy-free-tier.sh  deploy-gcp.sh  validate-env.sh
deploy/local/: nginx.conf  prometheus.yml
deploy/terraform/: .gitignore  .terraform.lock.hcl  README.md  artifact_registry.tf  cloudrun.tf  cloudsql.tf  main-minimal.tf.bak  main.tf  neon.tf  networking.tf  outputs.tf  redis.tf  terraform.tfvars.example  variables.tf
docs/: 2025-11-19_session_database_setup.md  2025-11-21_sessions_overview.md  ARCHITECTURE_OVERVIEW.md  ARCHITECTURE_PIPELINE.md  ARCHIVE_INDEX.md  BRAND_GUIDE.md  CI_BADGE_GREEN_PLAN.md  COLORAIDE_FEATURE_ANALYSIS.md  COLORAIDE_INTEGRATION.md  COLOR_INTEGRATION_ROADMAP.md  COLOR_PIPELINE_VISUALIZATION.md  COMPONENT_REFACTORING_ROADMAP.md  DATABASE_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_OPTIONS.md  DESIGN.md  DESIGN_SYSTEM_STRUCTURE.md  DESIGN_TOKENS_QUICK_REFERENCE.md  DESIGN_TOKENS_W3C_STATUS.md  DEVELOPER_WORKFLOW.md  DEVOPS_GUIDE.md  DOCUMENTATION.md  DOCUMENTATION_INDEX.md  E2E_TESTING_ROADMAP.md  EDUCATIONAL_FRONTEND_DESIGN.md  ENVIRONMENT_VARIABLES.md  FRONTEND_COMPONENT_USAGE_MAP.md  FRONTEND_SHADOW_SPACING_FIXES.md  HANDOFF_TYPOGRAPHY_FONTS_20251203.md  HANDOFF_TYPOGRAPHY_FONTS_20251203_SESSION2.md  IMPLEMENTATION.md  IMPLEMENTATION_STRATEGY.md  INFRASTRUCTURE_SETUP.md  ISSUE_9A_COMPLETION_SUMMARY.md  ISSUE_9B_HANDOFF.md  ISSUE_9B_PHASE2_IMAGEUPLOADER_COMPLETION.md  ISSUE_9B_PLAN.md  ISSUE_9B_SESSION_SUMMARY.md  LIBRARY_INDEX.md  LIGHTING_SHADOWS_E2E_TESTS.md  (+32 more)
docs/api/: README.md
docs/architecture/: 2025-11-21-architecture-decisions.md  2025-11-24_architecture_parity_check.md  ADAPTER_PATTERN.md  ARCHITECTURE_QUICK_START.md  ATOMIC_STREAMING_SUMMARY.md  COLOR_PIPELINE_ANALYSIS.md  COLOR_UNUSED_ALGORITHMS.md  COMPONENT_MIGRATION_MATRIX.md  COMPONENT_MODULARITY_ANALYSIS_2025_12_09.md  COMPONENT_TOKEN_SCHEMA.md  CURRENT_ARCHITECTURE_STATE.md  EXISTING_CAPABILITIES_INVENTORY.md  EXTRACTOR_PATTERNS.md  IMPLEMENTATION_CHECKLIST_PHASE_1_4.md  MASTER_REFACTORING_SYNTHESIS.md  MODULAR_GRAPH_IMPLEMENTATION_ROADMAP.md  MODULAR_TOKEN_PLATFORM_VISION.md  MULTIMODAL_COMPONENT_ARCHITECTURE.md  PIPELINE_GLOSSARY.md  PLAN_AGENT_MULTIMODAL_ARCHITECTURE_2025_12_09.md  PLUGIN_ARCHITECTURE.md  README.md  REFACTORING_QUICK_START.md  SCHEMA_ARCHITECTURE_DIAGRAM.md  STRATEGIC_VISION_AND_ARCHITECTURE.md  TOKEN_GRAPH_DATA_MODEL_2025_12_09.md  TYPESCRIPT_TYPE_ARCHITECTURE_REVIEW.md  UNIFIED_MULTIMODAL_ARCHITECTURE.md  architecture_overview.md  architecture_pipeline.md  backend_architecture.md  color_spacing_parity.md  legacy_pipeline_retirement.md  retire_pipeline_handoff.md  test_env_setup.md  token_graph.md
docs/archive/: README.md
docs/archive_development/: DEPLOYMENT.md  (+4 more)
frontend/: .dockerignore  .eslintrc.cjs  MINIMALIST_REDESIGN_STATUS.md  README.md  check-relations.mjs  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
scripts/: batch_reprocess_shadows.py  check_env_vars.py  cleanup-remote-branches.sh  debug-cloudrun.sh  export_colors_w3c.sh  export_spacing_w3c.sh  generate_comparison_visuals.py  generate_figma_tokens.py  process_enhanced_shadows.py  process_shadows_v2.py  process_test_images.py  restart_dev_stack.sh  run_playwright_e2e.sh  setup-dev.sh  setup-github-envs.sh  shadow_pipeline_demo.py  test-production-build.sh  test_shadow_methods.py  token_graph_inspect.py  validate.sh  verify_export_tokens.sh
src/: __init__.py  api.py  component_generator.py  design_tokens.py  generation_pipeline.py  image_processor.py  openai_vision.py  svg_generator.py  visual_dna.py
static/: advanced-demo.html  advanced-demo.js  app.js  index.html
terraform/: DEPRECATED.md  README.md  main.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf
test-results/: .last-run.json
test_images/: README.md
tests/: README.md  __init__.py  conftest.py  test_init.py  token_smoke_test.py
(+1003 files in other folders)
